# Ouroboros

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build.py
.github/: copilot-instructions.md
.github/workflows/: pages.yml  publish-bench-latest.yml
bench/: CMakeLists.txt
bench/size/: RingBufferSize.cpp  RingBufferSizeARM.cpp
doc/: architecture-guide.md
example/: CMakeLists.txt  README.md
inc/spmc/: RingBuffer.h
inc/spsc/: RingBuffer.h
scripts/: generate_pages.py
test/: CMakeLists.txt  README.md  SpmcRingBufferTest.cpp
test/fuzz/: CMakeLists.txt  FuzzMpsc.cpp  FuzzSpmc.cpp  FuzzSpsc.cpp
